@@ -76,8 +76,8 @@ ACE_TMAIN(int argc, ACE_TCHAR *argv[])
     {
       // Initialize orb
       CORBA::ORB_var orb = CORBA::ORB_init (argc,
-		                                        argv,
-					                                  "");
+                                            argv,
+                                            "");
 
       if (parse_args (argc, argv) != 0)
         {
