@@ -19,18 +19,18 @@ parse_args (int argc, char *argv[])
         {
         case 'k':
           ior = get_opts.opt_arg ();
-	        break;
+          break;
 
         case 'm':
-	        message = get_opts.opt_arg ();
-	        break;
+          message = get_opts.opt_arg ();
+          break;
 
         case '?':  // display help for use of the server.
         default:
           ACE_ERROR_RETURN ((LM_ERROR,
                             "Usage:  %s\n"
-			                      "-k <Sender IOR> (default is file://Sender.ior)\n",
-			                      "-m <Message>\n",
+                            "-k <Sender IOR> (default is file://Sender.ior)\n",
+                            "-m <Message>\n",
                             argv [0]),
                             -1);
           break;
